--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  splashscreen: ^1.3.5
+  provider: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -80,5 +80,8 @@ flutter:
           weight: 500
         - asset: fonts/montserrat_med.ttf
           weight: 200
+    - family: SFProText
+      fonts:
+        - asset: fonts/sfpro.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
